# stats-bigdata-basics

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: cows.csv  waffle_divorce.csv
notebooks/: 01-StatAndPython.ipynb
