[project]
name = "introstatbigdata"
version = "1.0.0"
description = "Beginner-friendly materials for Statistics and Big Data Analytics using Python (Colab-ready notebooks, datasets, and figures)."
authors = [
    { name = "MSc. Carlos Alejandro Perez Garcia", email = "cpgarcia518@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "ipykernel>=6.25",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
]


[project.optional-dependencies]
dev = ["ruff>=0.5", "black>=24.0", "pre-commit>=3.5", "nbstripout>=0.6"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]
